--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,6 @@ flutter:
 flutter_icons:
   android: true
   ios: false
-  image_path: "assets/icon/app_icon.png"
+  image_path: "assets/icon/icon.png"
   adaptive_icon_background: "#6366F1"
-  adaptive_icon_foreground: "assets/icon/app_icon.png"
+  adaptive_icon_foreground: "assets/icon/icon.png"
