Fixed foregroundServiceType crash issue

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pub-
 
-      - name: Install dependencies
+      - name: Install adependencies
         run: flutter pub get
 
       - name: Build APK Release
